--- a/soccer.html
+++ b/soccer.html
@@ -98,39 +98,74 @@
 <tr>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Pisa vs Como</a></td>
-<td>January 06, 2026 06:00 AM</td>
-<td><span class="countdown-timer" data-end="January 07, 2026 06:00:00 AM" data-start="January 06, 2026 06:00:00 AM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Napoli vs Verona</a></td>
+<td>January 07, 2026 09:30 AM</td>
+<td><span class="countdown-timer" data-end="January 08, 2026 09:30:00 AM" data-start="January 07, 2026 09:30:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Salzburg vs Bayern München</a></td>
-<td>January 06, 2026 06:00 AM</td>
-<td><span class="countdown-timer" data-end="January 07, 2026 06:00:00 AM" data-start="January 06, 2026 06:00:00 AM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Bologna vs Atalanta</a></td>
+<td>January 07, 2026 09:30 AM</td>
+<td><span class="countdown-timer" data-end="January 08, 2026 09:30:00 AM" data-start="January 07, 2026 09:30:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Lecce vs Roma</a></td>
-<td>January 06, 2026 09:00 AM</td>
-<td><span class="countdown-timer" data-end="January 07, 2026 09:00:00 AM" data-start="January 06, 2026 09:00:00 AM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Barcelona vs Athletic Club</a></td>
+<td>January 07, 2026 11:00 AM</td>
+<td><span class="countdown-timer" data-end="January 08, 2026 11:00:00 AM" data-start="January 07, 2026 11:00:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Sassuolo vs Juventus</a></td>
-<td>January 06, 2026 11:45 AM</td>
-<td><span class="countdown-timer" data-end="January 07, 2026 11:45:00 AM" data-start="January 06, 2026 11:45:00 AM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Bournemouth vs Tottenham Hotspur</a></td>
+<td>January 07, 2026 11:30 AM</td>
+<td><span class="countdown-timer" data-end="January 08, 2026 11:30:00 AM" data-start="January 07, 2026 11:30:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">Rangers vs Aberdeen</a></td>
-<td>January 06, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 07, 2026 12:00:00 PM" data-start="January 06, 2026 12:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-5">Brentford vs Sunderland</a></td>
+<td>January 07, 2026 11:30 AM</td>
+<td><span class="countdown-timer" data-end="January 08, 2026 11:30:00 AM" data-start="January 07, 2026 11:30:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-5">West Ham United vs Nottingham Forest</a></td>
-<td>January 06, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 07, 2026 12:00:00 PM" data-start="January 06, 2026 12:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-6">Crystal Palace vs Aston Villa</a></td>
+<td>January 07, 2026 11:30 AM</td>
+<td><span class="countdown-timer" data-end="January 08, 2026 11:30:00 AM" data-start="January 07, 2026 11:30:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-6">Granada vs Rayo Vallecano</a></td>
-<td>January 06, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 07, 2026 12:00:00 PM" data-start="January 06, 2026 12:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-7">Everton vs Wolves</a></td>
+<td>January 07, 2026 11:30 AM</td>
+<td><span class="countdown-timer" data-end="January 08, 2026 11:30:00 AM" data-start="January 07, 2026 11:30:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-8">Fulham vs Chelsea</a></td>
+<td>January 07, 2026 11:30 AM</td>
+<td><span class="countdown-timer" data-end="January 08, 2026 11:30:00 AM" data-start="January 07, 2026 11:30:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-9">Manchester City vs Brighton</a></td>
+<td>January 07, 2026 11:30 AM</td>
+<td><span class="countdown-timer" data-end="January 08, 2026 11:30:00 AM" data-start="January 07, 2026 11:30:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Lazio vs Fiorentina</a></td>
+<td>January 07, 2026 11:45 AM</td>
+<td><span class="countdown-timer" data-end="January 08, 2026 11:45:00 AM" data-start="January 07, 2026 11:45:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Parma vs Inter Milan</a></td>
+<td>January 07, 2026 11:45 AM</td>
+<td><span class="countdown-timer" data-end="January 08, 2026 11:45:00 AM" data-start="January 07, 2026 11:45:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-10">Benfica vs Sporting Braga</a></td>
+<td>January 07, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 08, 2026 12:00:00 PM" data-start="January 07, 2026 12:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-11">Burnley vs Manchester United</a></td>
+<td>January 07, 2026 12:15 PM</td>
+<td><span class="countdown-timer" data-end="January 08, 2026 12:15:00 PM" data-start="January 07, 2026 12:15:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-12">Newcastle United vs Leeds United</a></td>
+<td>January 07, 2026 11:45 AM</td>
+<td><span class="countdown-timer" data-end="January 08, 2026 11:45:00 AM" data-start="January 07, 2026 11:45:00 AM"></span></td>
 </tr>
 <tr>
 </tr></tbody></tr></tbody></table></div>
