--- a/nba.html
+++ b/nba.html
@@ -227,7 +227,7 @@
      </tbody>
     </table>
     <h2>
-     NBA Schedule for January 06, 2026
+     NBA Schedule for January 07, 2026
     </h2>
     <table id="eventsTable">
      <thead>
@@ -247,84 +247,168 @@
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-1">
-         Cleveland Cavaliers vs Indiana Pacers
+         Toronto Raptors vs Charlotte Hornets
         </a>
        </td>
        <td>
-        January 06, 2026 4:00 PM
+        January 07, 2026 4:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 07, 2026 4:00 PM:00" data-start="January 06, 2026 4:00 PM:00">
+        <span class="countdown-timer" data-end="January 08, 2026 4:00 PM:00" data-start="January 07, 2026 4:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-2">
-         Orlando Magic vs Washington Wizards
+         Chicago Bulls vs Detroit Pistons
         </a>
        </td>
        <td>
-        January 06, 2026 4:00 PM
+        January 07, 2026 4:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 07, 2026 4:00 PM:00" data-start="January 06, 2026 4:00 PM:00">
+        <span class="countdown-timer" data-end="January 08, 2026 4:00 PM:00" data-start="January 07, 2026 4:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-3">
-         San Antonio Spurs vs Memphis Grizzlies
+         Washington Wizards vs Philadelphia 76ers
         </a>
        </td>
        <td>
-        January 06, 2026 5:00 PM
+        January 07, 2026 4:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 07, 2026 5:00 PM:00" data-start="January 06, 2026 5:00 PM:00">
+        <span class="countdown-timer" data-end="January 08, 2026 4:00 PM:00" data-start="January 07, 2026 4:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-4">
-         Miami Heat vs Minnesota Timberwolves
+         Denver Nuggets vs Boston Celtics
         </a>
        </td>
        <td>
-        January 06, 2026 5:00 PM
+        January 07, 2026 4:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 07, 2026 5:00 PM:00" data-start="January 06, 2026 5:00 PM:00">
+        <span class="countdown-timer" data-end="January 08, 2026 4:00 PM:00" data-start="January 07, 2026 4:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-5">
-         Los Angeles Lakers vs New Orleans Pelicans
+         New Orleans Pelicans vs Atlanta Hawks
         </a>
        </td>
        <td>
-        January 06, 2026 5:00 PM
+        January 07, 2026 4:30 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 07, 2026 5:00 PM:00" data-start="January 06, 2026 5:00 PM:00">
+        <span class="countdown-timer" data-end="January 08, 2026 4:30 PM:00" data-start="January 07, 2026 4:30 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-6">
-         Dallas Mavericks vs Sacramento Kings
+         Orlando Magic vs Brooklyn Nets
         </a>
        </td>
        <td>
-        January 06, 2026 8:00 PM
+        January 07, 2026 4:30 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 07, 2026 8:00 PM:00" data-start="January 06, 2026 8:00 PM:00">
+        <span class="countdown-timer" data-end="January 08, 2026 4:30 PM:00" data-start="January 07, 2026 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-7">
+         Los Angeles Clippers vs New York Knicks
+        </a>
+       </td>
+       <td>
+        January 07, 2026 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 08, 2026 4:30 PM:00" data-start="January 07, 2026 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-8">
+         Phoenix Suns vs Memphis Grizzlies
+        </a>
+       </td>
+       <td>
+        January 07, 2026 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 08, 2026 5:00 PM:00" data-start="January 07, 2026 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-9">
+         Utah Jazz vs Oklahoma City Thunder
+        </a>
+       </td>
+       <td>
+        January 07, 2026 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 08, 2026 5:00 PM:00" data-start="January 07, 2026 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-10">
+         Los Angeles Lakers vs San Antonio Spurs
+        </a>
+       </td>
+       <td>
+        January 07, 2026 6:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 08, 2026 6:30 PM:00" data-start="January 07, 2026 6:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-11">
+         Milwaukee Bucks vs Golden State Warriors
+        </a>
+       </td>
+       <td>
+        January 07, 2026 7:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 08, 2026 7:00 PM:00" data-start="January 07, 2026 7:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-12">
+         Houston Rockets vs Portland Trail Blazers
+        </a>
+       </td>
+       <td>
+        January 07, 2026 7:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 08, 2026 7:00 PM:00" data-start="January 07, 2026 7:00 PM:00">
         </span>
        </td>
       </tr>
