--- a/index.html
+++ b/index.html
@@ -184,24 +184,24 @@
 <tbody>
 <tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-5">Premier League</a></td>
-<td>January 06, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 07, 2026 12:00:00 PM" data-start="January 06, 2026 12:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Supercopa de España</a></td>
+<td>January 07, 2026 11:00 AM</td>
+<td><span class="countdown-timer" data-end="January 08, 2026 11:00:00 AM" data-start="January 07, 2026 11:00:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-6">Laliga</a></td>
-<td>January 06, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 07, 2026 12:00:00 PM" data-start="January 06, 2026 12:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.live/soccer">Premier League</a></td>
+<td>January 07, 2026 11:30 AM</td>
+<td><span class="countdown-timer" data-end="January 08, 2026 11:30:00 AM" data-start="January 07, 2026 11:30:00 AM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.live/nba">NBA</a></td>
-<td>January 06, 2026 4:00 PM</td>
-<td><span class="countdown-timer" data-end="January 07, 2026 04:00:00 PM" data-start="January 06, 2026 04:00:00 PM"></span></td>
+<td>January 07, 2026 4:00 PM</td>
+<td><span class="countdown-timer" data-end="January 08, 2026 04:00:00 PM" data-start="January 07, 2026 04:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/wwe-streams">WWE NXT</a></td>
-<td>January 06, 2026 5:00 PM</td>
-<td><span class="countdown-timer" data-end="January 07, 2026 05:00:00 PM" data-start="January 06, 2026 05:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.live/aew">AEW</a></td>
+<td>January 07, 2026 5:00 PM</td>
+<td><span class="countdown-timer" data-end="January 08, 2026 05:00:00 PM" data-start="January 07, 2026 05:00:00 PM"></span></td>
 </tr>
 <tr>
 </tr></tr></tbody>
