--- a/soccer.html
+++ b/soccer.html
@@ -165,7 +165,7 @@
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-12">Newcastle United vs Leeds United</a></td>
 <td>January 07, 2026 12:15 PM</td>
-<td><span class="countdown-timer" data-end="January 08, 2026 11:45:00 AM" data-start="January 07, 2026 11:45:00 AM"></span></td>
+<td><span class="countdown-timer" data-end="January 08, 2026 11:45:00 AM" data-start="January 07, 2026 12:15:00 PM"></span></td>
 </tr>
 <tr>
 </tr></tbody></tr></tbody></table></div>
