--- a/nba.html
+++ b/nba.html
@@ -310,6 +310,82 @@
       </tr>
      </tbody>
     </table>
+    <h2>
+     NBA Schedule for January 08, 2026
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-1">
+         Indiana Pacers vs Charlotte Hornets
+        </a>
+       </td>
+       <td>
+        January 08, 2026 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 09, 2026 4:00 PM:00" data-start="January 08, 2026 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-2">
+         Miami Heat vs Chicago Bulls
+        </a>
+       </td>
+       <td>
+        January 08, 2026 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 09, 2026 5:00 PM:00" data-start="January 08, 2026 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-3">
+         Cleveland Cavaliers vs Minnesota Timberwolves
+        </a>
+       </td>
+       <td>
+        January 08, 2026 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 09, 2026 5:00 PM:00" data-start="January 08, 2026 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-4">
+         Dallas Mavericks vs Utah Jazz
+        </a>
+       </td>
+       <td>
+        January 08, 2026 6:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 09, 2026 6:00 PM:00" data-start="January 08, 2026 6:00 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
      <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
       <li class="nav-item">
