--- a/nhl.html
+++ b/nhl.html
@@ -119,6 +119,69 @@
             <td><a href="https://roxiestreams.live/nhl-streams-5">San Jose Sharks vs Los Angeles Kings</a></td>
             <td>January 07, 2026 07:30 PM</td>
             <td><span class="countdown-timer" data-end="2026-01-08 19:30:00" data-start="2026-01-07 19:30:00"></span></td>
+        </tr>
+        <tr style="background-color: #333; color: white;">
+            <td colspan="3"><strong>Thursday, January 08, 2026</strong></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-1">Calgary Flames vs Boston Bruins</a></td>
+            <td>January 08, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-09 16:00:00" data-start="2026-01-08 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-2">Florida Panthers vs Montreal Canadiens</a></td>
+            <td>January 08, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-09 16:00:00" data-start="2026-01-08 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-3">Vancouver Canucks vs Detroit Red Wings</a></td>
+            <td>January 08, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-09 16:00:00" data-start="2026-01-08 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-4">Buffalo Sabres vs New York Rangers</a></td>
+            <td>January 08, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-09 16:00:00" data-start="2026-01-08 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-5">Toronto Maple Leafs vs Philadelphia Flyers</a></td>
+            <td>January 08, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-09 16:00:00" data-start="2026-01-08 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-6">New Jersey Devils vs Pittsburgh Penguins</a></td>
+            <td>January 08, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-09 16:00:00" data-start="2026-01-08 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-7">Anaheim Ducks vs Carolina Hurricanes</a></td>
+            <td>January 08, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-09 16:00:00" data-start="2026-01-08 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-8">New York Islanders vs Nashville Predators</a></td>
+            <td>January 08, 2026 05:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-09 17:00:00" data-start="2026-01-08 17:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-9">Edmonton Oilers vs Winnipeg Jets</a></td>
+            <td>January 08, 2026 05:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-09 17:00:00" data-start="2026-01-08 17:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-10">Ottawa Senators vs Colorado Avalanche</a></td>
+            <td>January 08, 2026 06:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-09 18:00:00" data-start="2026-01-08 18:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-11">Columbus Blue Jackets vs Vegas Golden Knights</a></td>
+            <td>January 08, 2026 07:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-09 19:00:00" data-start="2026-01-08 19:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-12">Minnesota Wild vs Seattle Kraken</a></td>
+            <td>January 08, 2026 07:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-09 19:00:00" data-start="2026-01-08 19:00:00"></span></td>
         </tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
