--- a/nfl.html
+++ b/nfl.html
@@ -143,14 +143,14 @@
      <tr>
       <td>
        <a href="https://roxiestreams.live/ncaa-streams-1">
-        Illinois State vs Montana State
+         Miami (FL) vs Ole Miss
        </a>
       </td>
       <td>
-       January 05, 2026 16:30 PM
+       January 08, 2026 4:30 PM
       </td>
       <td>
-       <span class="countdown-timer" data-end="January 06, 2026 10:00 AM:00" data-start="January 05, 2026 4:30 PM:00">
+       <span class="countdown-timer" data-end="January 09, 2026 10:00 AM:00" data-start="January 08, 2026 4:30 PM:00">
        </span>
       </td>
      </tr>
