--- a/soccer.html
+++ b/soccer.html
@@ -98,77 +98,42 @@
 <tr>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Napoli vs Verona</a></td>
-<td>January 07, 2026 09:30 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Al Nassr vs Quadisiya</a></td>
+<td>January 08, 2026 09:30 AM</td>
 <td><span class="countdown-timer" data-end="January 08, 2026 09:30:00 AM" data-start="January 07, 2026 09:30:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Bologna vs Atalanta</a></td>
-<td>January 07, 2026 09:30 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Cremonese vs Cagliari</a></td>
+<td>January 08, 2026 09:30 AM</td>
 <td><span class="countdown-timer" data-end="January 08, 2026 09:30:00 AM" data-start="January 07, 2026 09:30:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">Barcelona vs Athletic Club</a></td>
-<td>January 07, 2026 11:00 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-3">PSG vs Marseille</a></td>
+<td>January 08, 2026 10:00 AM</td>
 <td><span class="countdown-timer" data-end="January 08, 2026 11:00:00 AM" data-start="January 07, 2026 11:00:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">Bournemouth vs Tottenham Hotspur</a></td>
-<td>January 07, 2026 11:30 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Atlético Madrid vs Real Madrid</a></td>
+<td>January 08, 2026 11:00 AM</td>
 <td><span class="countdown-timer" data-end="January 08, 2026 11:30:00 AM" data-start="January 07, 2026 11:30:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-5">Brentford vs Sunderland</a></td>
-<td>January 07, 2026 11:30 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-5">Milan vs Genoa</a></td>
+<td>January 08, 2026 11:45 AM</td>
 <td><span class="countdown-timer" data-end="January 08, 2026 11:30:00 AM" data-start="January 07, 2026 11:30:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-6">Crystal Palace vs Aston Villa</a></td>
-<td>January 07, 2026 11:30 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-6">Arsenal vs Liverpool</a></td>
+<td>January 08, 2026 12:00 PM</td>
 <td><span class="countdown-timer" data-end="January 08, 2026 11:30:00 AM" data-start="January 07, 2026 11:30:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-7">Everton vs Wolves</a></td>
-<td>January 07, 2026 11:30 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-7">Santa Cruz vs Defensa y Justicia</a></td>
+<td>January 08, 2026 3:30 PM</td>
 <td><span class="countdown-timer" data-end="January 08, 2026 11:30:00 AM" data-start="January 07, 2026 11:30:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-8">Fulham vs Chelsea</a></td>
-<td>January 07, 2026 11:30 AM</td>
-<td><span class="countdown-timer" data-end="January 08, 2026 11:30:00 AM" data-start="January 07, 2026 11:30:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-9">Manchester City vs Brighton</a></td>
-<td>January 07, 2026 11:30 AM</td>
-<td><span class="countdown-timer" data-end="January 08, 2026 11:30:00 AM" data-start="January 07, 2026 11:30:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Lazio vs Fiorentina</a></td>
-<td>January 07, 2026 11:45 AM</td>
-<td><span class="countdown-timer" data-end="January 08, 2026 11:45:00 AM" data-start="January 07, 2026 11:45:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Parma vs Inter Milan</a></td>
-<td>January 07, 2026 11:45 AM</td>
-<td><span class="countdown-timer" data-end="January 08, 2026 11:45:00 AM" data-start="January 07, 2026 11:45:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-10">Benfica vs Sporting Braga</a></td>
-<td>January 07, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 08, 2026 12:00:00 PM" data-start="January 07, 2026 12:00:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-11">Burnley vs Manchester United</a></td>
-<td>January 07, 2026 12:15 PM</td>
-<td><span class="countdown-timer" data-end="January 08, 2026 12:15:00 PM" data-start="January 07, 2026 12:15:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-12">Newcastle United vs Leeds United</a></td>
-<td>January 07, 2026 12:15 PM</td>
-<td><span class="countdown-timer" data-end="January 08, 2026 11:45:00 AM" data-start="January 07, 2026 12:15:00 PM"></span></td>
-</tr>
-<tr>
-</tr></tbody></tr></tbody></table></div>
+</tbody></tr></tbody></table></div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
 <li class="nav-item"><a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
