--- a/soccer.html
+++ b/soccer.html
@@ -100,40 +100,40 @@
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-1">Al Nassr vs Quadisiya</a></td>
 <td>January 08, 2026 09:30 AM</td>
-<td><span class="countdown-timer" data-end="January 08, 2026 09:30:00 AM" data-start="January 07, 2026 09:30:00 AM"></span></td>
+<td><span class="countdown-timer" data-end="January 09, 2026 09:30:00 AM" data-start="January 08, 2026 09:30:00 AM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-2">Cremonese vs Cagliari</a></td>
 <td>January 08, 2026 09:30 AM</td>
-<td><span class="countdown-timer" data-end="January 08, 2026 09:30:00 AM" data-start="January 07, 2026 09:30:00 AM"></span></td>
+<td><span class="countdown-timer" data-end="January 09, 2026 09:30:00 AM" data-start="January 08, 2026 09:30:00 AM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-3">PSG vs Marseille</a></td>
 <td>January 08, 2026 10:00 AM</td>
-<td><span class="countdown-timer" data-end="January 08, 2026 11:00:00 AM" data-start="January 07, 2026 11:00:00 AM"></span></td>
+<td><span class="countdown-timer" data-end="January 09, 2026 10:00:00 AM" data-start="January 08, 2026 10:00:00 AM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-4">Atlético Madrid vs Real Madrid</a></td>
 <td>January 08, 2026 11:00 AM</td>
-<td><span class="countdown-timer" data-end="January 08, 2026 11:30:00 AM" data-start="January 07, 2026 11:30:00 AM"></span></td>
+<td><span class="countdown-timer" data-end="January 09, 2026 11:00:00 AM" data-start="January 08, 2026 11:00:00 AM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-5">Milan vs Genoa</a></td>
 <td>January 08, 2026 11:45 AM</td>
-<td><span class="countdown-timer" data-end="January 08, 2026 11:30:00 AM" data-start="January 07, 2026 11:30:00 AM"></span></td>
+<td><span class="countdown-timer" data-end="January 09, 2026 11:45:00 AM" data-start="January 08, 2026 11:45:00 AM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-6">Arsenal vs Liverpool</a></td>
 <td>January 08, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 08, 2026 11:30:00 AM" data-start="January 07, 2026 11:30:00 AM"></span></td>
+<td><span class="countdown-timer" data-end="January 09, 2026 12:00:00 PM" data-start="January 08, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-7">Santa Cruz vs Defensa y Justicia</a></td>
 <td>January 08, 2026 3:30 PM</td>
-<td><span class="countdown-timer" data-end="January 08, 2026 11:30:00 AM" data-start="January 07, 2026 11:30:00 AM"></span></td>
+<td><span class="countdown-timer" data-end="January 09, 2026 03:30:00 PM" data-start="January 08, 2026 03:30:00 PM"></span></td>
 </tr>
 <tr>
-</tbody></tr></tbody></table></div>
+</tr></tbody></tr></tbody></table></div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
 <li class="nav-item"><a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
