--- a/soccer.html
+++ b/soccer.html
@@ -98,38 +98,23 @@
 <tr>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Al Nassr vs Quadisiya</a></td>
-<td>January 08, 2026 09:30 AM</td>
-<td><span class="countdown-timer" data-end="January 09, 2026 09:30:00 AM" data-start="January 08, 2026 09:30:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Cremonese vs Cagliari</a></td>
-<td>January 08, 2026 09:30 AM</td>
-<td><span class="countdown-timer" data-end="January 09, 2026 09:30:00 AM" data-start="January 08, 2026 09:30:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">PSG vs Marseille</a></td>
-<td>January 08, 2026 10:00 AM</td>
-<td><span class="countdown-timer" data-end="January 09, 2026 10:00:00 AM" data-start="January 08, 2026 10:00:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">Atlético Madrid vs Real Madrid</a></td>
-<td>January 08, 2026 11:00 AM</td>
-<td><span class="countdown-timer" data-end="January 09, 2026 11:00:00 AM" data-start="January 08, 2026 11:00:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-5">Milan vs Genoa</a></td>
-<td>January 08, 2026 11:45 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-5">Getafe vs Real Sociedad</a></td>
+<td>January 08, 2026 12:00 PM</td>
 <td><span class="countdown-timer" data-end="January 09, 2026 11:45:00 AM" data-start="January 08, 2026 11:45:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-6">Arsenal vs Liverpool</a></td>
-<td>January 08, 2026 12:00 PM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-6">Mazatlán vs Juárez</a></td>
+<td>January 08, 2026 5:00 PM</td>
 <td><span class="countdown-timer" data-end="January 09, 2026 12:00:00 PM" data-start="January 08, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-7">Santa Cruz vs Defensa y Justicia</a></td>
-<td>January 08, 2026 3:30 PM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-7">Tijuana vs América</a></td>
+<td>January 08, 2026 7:00 PM</td>
+<td><span class="countdown-timer" data-end="January 09, 2026 03:30:00 PM" data-start="January 08, 2026 03:30:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-8">Atlas vs Puebla</a></td>
+<td>January 08, 2026 7:00 PM</td>
 <td><span class="countdown-timer" data-end="January 09, 2026 03:30:00 PM" data-start="January 08, 2026 03:30:00 PM"></span></td>
 </tr>
 <tr>
