--- a/nba.html
+++ b/nba.html
@@ -198,6 +198,166 @@
       </tr>
      </tbody>
     </table>
+    <h2>
+     NBA Schedule for January 09, 2026
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-1">
+         Toronto Raptors vs Boston Celtics
+        </a>
+       </td>
+       <td>
+        January 09, 2026 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 10, 2026 4:00 PM:00" data-start="January 09, 2026 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-2">
+         Philadelphia 76ers vs Orlando Magic
+        </a>
+       </td>
+       <td>
+        January 09, 2026 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 10, 2026 4:00 PM:00" data-start="January 09, 2026 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-3">
+         New Orleans Pelicans vs Washington Wizards
+        </a>
+       </td>
+       <td>
+        January 09, 2026 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 10, 2026 4:00 PM:00" data-start="January 09, 2026 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-4">
+         Los Angeles Clippers vs Brooklyn Nets
+        </a>
+       </td>
+       <td>
+        January 09, 2026 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 10, 2026 4:30 PM:00" data-start="January 09, 2026 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-5">
+         Oklahoma City Thunder vs Memphis Grizzlies
+        </a>
+       </td>
+       <td>
+        January 09, 2026 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 10, 2026 5:00 PM:00" data-start="January 09, 2026 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-6">
+         Atlanta Hawks vs Denver Nuggets
+        </a>
+       </td>
+       <td>
+        January 09, 2026 6:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 10, 2026 6:00 PM:00" data-start="January 09, 2026 6:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-7">
+         New York Knicks vs Phoenix Suns
+        </a>
+       </td>
+       <td>
+        January 09, 2026 6:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 10, 2026 6:00 PM:00" data-start="January 09, 2026 6:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-8">
+         Sacramento Kings vs Golden State Warriors
+        </a>
+       </td>
+       <td>
+        January 09, 2026 7:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 10, 2026 7:00 PM:00" data-start="January 09, 2026 7:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-9">
+         Houston Rockets vs Portland Trail Blazers
+        </a>
+       </td>
+       <td>
+        January 09, 2026 7:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 10, 2026 7:00 PM:00" data-start="January 09, 2026 7:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-10">
+         Milwaukee Bucks vs Los Angeles Lakers
+        </a>
+       </td>
+       <td>
+        January 09, 2026 7:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 10, 2026 7:30 PM:00" data-start="January 09, 2026 7:30 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
      <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
       <li class="nav-item">
