--- a/nhl.html
+++ b/nhl.html
@@ -154,6 +154,24 @@
             <td><a href="https://roxiestreams.live/nhl-streams-12">Minnesota Wild vs Seattle Kraken</a></td>
             <td>January 08, 2026 07:00 PM</td>
             <td><span class="countdown-timer" data-end="2026-01-09 19:00:00" data-start="2026-01-08 19:00:00"></span></td>
+        </tr>
+        <tr style="background-color: #333; color: white;">
+            <td colspan="3"><strong>Friday, January 09, 2026</strong></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-1">Washington Capitals vs Chicago Blackhawks</a></td>
+            <td>January 09, 2026 05:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-10 17:00:00" data-start="2026-01-09 17:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-2">Los Angeles Kings vs Winnipeg Jets</a></td>
+            <td>January 09, 2026 05:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-10 17:00:00" data-start="2026-01-09 17:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-3">St. Louis Blues vs Utah Mammoth</a></td>
+            <td>January 09, 2026 06:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-10 18:00:00" data-start="2026-01-09 18:00:00"></span></td>
         </tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
