--- a/fighting.html
+++ b/fighting.html
@@ -98,14 +98,9 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/aew">AEW</a></td>
-<td>January 07, 2026 17:00 PM</td>
-<td><span class="countdown-timer" data-end="January 30, 2026 23:59:00" data-start="January 07, 2026 17:00:00"></span></td>
-</tr>
-<tr>
 <td><a href="https://roxiestreams.live/wwe-streams">WWE Smackdown</a></td>
-<td>January 09, 2026 17:00 PM</td>
-<td><span class="countdown-timer" data-end="January 30, 2026 23:59:00" data-start="January 09, 2026 17:00:00"></span></td>
+<td>January 09, 2026 11:00 AM</td>
+<td><span class="countdown-timer" data-end="January 30, 2026 23:59:00" data-start="January 09, 2026 11:00:00"></span></td>
 </tr>
 <tr>
 </tbody>
