--- a/index.html
+++ b/index.html
@@ -184,27 +184,22 @@
 <tbody>
 <tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">France Super Cup</a></td>
-<td>January 08, 2026 10:00 AM</td>
+<td><a href="https://roxiestreams.live/wwe-streams">WWE Smackdowsn</a></td>
+<td>January 09, 2026 11:00 AM</td>
 <td><span class="countdown-timer" data-end="January 09, 2026 10:00:00 AM" data-start="January 08, 2026 10:00:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">Supercopa de España</a></td>
-<td>January 08, 2026 11:00 AM</td>
-<td><span class="countdown-timer" data-end="January 09, 2026 11:00:00 AM" data-start="January 08, 2026 11:00:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-6">Premier League</a></td>
-<td>January 08, 2026 12:00 AM</td>
-<td><span class="countdown-timer" data-end="January 09, 2026 12:00:00 AM" data-start="January 08, 2026 12:00:00 AM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-7">Laliga</a></td>
+<td>January 09, 2026 12:00 AM</td>
+<td><span class="countdown-timer" data-end="January 09, 2026 10:00:00 AM" data-start="January 08, 2026 10:00:00 AM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.live/nba">NBA</a></td>
-<td>January 08, 2026 4:00 PM</td>
-<td><span class="countdown-timer" data-end="January 09, 2026 04:00:00 PM" data-start="January 08, 2026 04:00:00 PM"></span></td>
+<td>January 09, 2026 4:00 PM</td>
+<td><span class="countdown-timer" data-end="January 09, 2026 11:00:00 AM" data-start="January 08, 2026 11:00:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/ncaa-streams-1">Fiesta Bowl (CFP Semifinal)</a></td>
+<td><a href="https://roxiestreams.live/ncaa-streams-1">Peach Bowl (CFP Semifinal)</a></td>
 <td>January 08, 2026 5:00 PM</td>
 <td><span class="countdown-timer" data-end="January 09, 2026 05:00:00 PM" data-start="January 08, 2026 05:00:00 PM"></span></td>
 </tr>
