--- a/nba.html
+++ b/nba.html
@@ -282,6 +282,110 @@
       </tr>
      </tbody>
     </table>
+    <h2>
+     NBA Schedule for January 10, 2026
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-1">
+         Minnesota Timberwolves vs Cleveland Cavaliers
+        </a>
+       </td>
+       <td>
+        January 10, 2026 10:00 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 11, 2026 10:00 AM:00" data-start="January 10, 2026 10:00 AM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-2">
+         Miami Heat vs Indiana Pacers
+        </a>
+       </td>
+       <td>
+        January 10, 2026 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 11, 2026 4:00 PM:00" data-start="January 10, 2026 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-3">
+         Los Angeles Clippers vs Detroit Pistons
+        </a>
+       </td>
+       <td>
+        January 10, 2026 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 11, 2026 4:30 PM:00" data-start="January 10, 2026 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-4">
+         San Antonio Spurs vs Boston Celtics
+        </a>
+       </td>
+       <td>
+        January 10, 2026 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 11, 2026 5:00 PM:00" data-start="January 10, 2026 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-5">
+         Dallas Mavericks vs Chicago Bulls
+        </a>
+       </td>
+       <td>
+        January 10, 2026 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 11, 2026 5:00 PM:00" data-start="January 10, 2026 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-6">
+         Charlotte Hornets vs Utah Jazz
+        </a>
+       </td>
+       <td>
+        January 10, 2026 6:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 11, 2026 6:30 PM:00" data-start="January 10, 2026 6:30 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
      <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
       <li class="nav-item">
