--- a/nhl.html
+++ b/nhl.html
@@ -109,6 +109,34 @@
             <td><a href="https://roxiestreams.live/nhl-streams-3">St. Louis Blues vs Utah Mammoth</a></td>
             <td>January 09, 2026 06:00 PM</td>
             <td><span class="countdown-timer" data-end="2026-01-10 18:00:00" data-start="2026-01-09 18:00:00"></span></td>
+        </tr>
+        <tr style="background-color: #333; color: white;">
+            <td colspan="3"><strong>Friday, January 10, 2025</strong></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-1">Chicago Blackhawks vs Detroit Red Wings</a></td>
+            <td>January 10, 2025 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-01-11 16:00:00" data-start="2025-01-10 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-2">Montreal Canadiens vs Washington Capitals</a></td>
+            <td>January 10, 2025 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-01-11 16:00:00" data-start="2025-01-10 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-3">Vancouver Canucks vs Carolina Hurricanes</a></td>
+            <td>January 10, 2025 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-01-11 16:00:00" data-start="2025-01-10 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-4">Los Angeles Kings vs Winnipeg Jets</a></td>
+            <td>January 10, 2025 05:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-01-11 17:00:00" data-start="2025-01-10 17:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-5">San Jose Sharks vs Utah Hockey Club</a></td>
+            <td>January 10, 2025 06:00 PM</td>
+            <td><span class="countdown-timer" data-end="2025-01-11 18:00:00" data-start="2025-01-10 18:00:00"></span></td>
         </tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
