--- a/soccer.html
+++ b/soccer.html
@@ -98,23 +98,123 @@
 <tr>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-5">Getafe vs Real Sociedad</a></td>
-<td>January 09, 2026 12:00 PM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Macclesfield vs Crystal Palace</a></td>
+<td>January 10, 2026 4:15 AM</td>
 <td><span class="countdown-timer" data-end="January 10, 2026 12:00:00 PM" data-start="January 09, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-6">Mazatlán vs Juárez</a></td>
-<td>January 09, 2026 5:00 PM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Everton vs Sunderland</a></td>
+<td>January 10, 2026 4:15 AM</td>
 <td><span class="countdown-timer" data-end="January 10, 2026 05:00:00 PM" data-start="January 09, 2026 05:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-7">Tijuana vs América</a></td>
-<td>January 09, 2026 7:00 PM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Luton Town vs Stevenage</a></td>
+<td>January 10, 2026 4:30 AM</td>
 <td><span class="countdown-timer" data-end="January 10, 2026 07:00:00 PM" data-start="January 09, 2026 07:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-8">Atlas vs Puebla</a></td>
-<td>January 09, 2026 7:00 PM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Real Oviedo vs Real Betis</a></td>
+<td>January 10, 2026 5:00 AM</td>
+<td><span class="countdown-timer" data-end="January 10, 2026 07:00:00 PM" data-start="January 09, 2026 07:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-5">Como vs Bologna</a></td>
+<td>January 10, 2026 6:00 AM</td>
+<td><span class="countdown-timer" data-end="January 10, 2026 07:00:00 PM" data-start="January 09, 2026 07:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-6">Freiburg vs Hamburger SV</a></td>
+<td>January 10, 2026 6:30 AM</td>
+<td><span class="countdown-timer" data-end="January 10, 2026 07:00:00 PM" data-start="January 09, 2026 07:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-7">Orléans vs Monaco</a></td>
+<td>January 10, 2026 6:30 AM</td>
+<td><span class="countdown-timer" data-end="January 10, 2026 07:00:00 PM" data-start="January 09, 2026 07:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-8">Fulham vs Middlesbrough</a></td>
+<td>January 10, 2026 7:00 AM</td>
+<td><span class="countdown-timer" data-end="January 10, 2026 07:00:00 PM" data-start="January 09, 2026 07:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Leyton Orient vs Cardiff City</a></td>
+<td>January 10, 2026 7:00 AM</td>
+<td><span class="countdown-timer" data-end="January 10, 2026 07:00:00 PM" data-start="January 09, 2026 07:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-9">Manchester City vs Exeter City</a></td>
+<td>January 10, 2026 7:00 AM</td>
+<td><span class="countdown-timer" data-end="January 10, 2026 07:00:00 PM" data-start="January 09, 2026 07:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-10">Newcastle United vs Bournemouth</a></td>
+<td>January 10, 2026 7:00 AM</td>
+<td><span class="countdown-timer" data-end="January 10, 2026 07:00:00 PM" data-start="January 09, 2026 07:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-5">Roma vs Sassuolo</a></td>
+<td>January 10, 2026 9:00 AM</td>
+<td><span class="countdown-timer" data-end="January 10, 2026 07:00:00 PM" data-start="January 09, 2026 07:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-7">Avranches vs Strasbourg</a></td>
+<td>January 10, 2026 9:00 AM</td>
+<td><span class="countdown-timer" data-end="January 10, 2026 07:00:00 PM" data-start="January 09, 2026 07:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-6">Bayer Leverkusen vs Stuttgart</a></td>
+<td>January 10, 2026 9:30 AM</td>
+<td><span class="countdown-timer" data-end="January 10, 2026 07:00:00 PM" data-start="January 09, 2026 07:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-11">Galatasaray vs Fenerbahçe</a></td>
+<td>January 10, 2026 9:30 AM</td>
+<td><span class="countdown-timer" data-end="January 10, 2026 07:00:00 PM" data-start="January 09, 2026 07:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-12">Tottenham vs Aston Villa</a></td>
+<td>January 10, 2026 9:45 AM</td>
+<td><span class="countdown-timer" data-end="January 10, 2026 07:00:00 PM" data-start="January 09, 2026 07:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-5">Atalanta vs Torino</a></td>
+<td>January 10, 2026 11:45 AM</td>
+<td><span class="countdown-timer" data-end="January 10, 2026 07:00:00 PM" data-start="January 09, 2026 07:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-13">Charlton Athletic vs Chelsea</a></td>
+<td>January 10, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 10, 2026 07:00:00 PM" data-start="January 09, 2026 07:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Valencia vs Elche</a></td>
+<td>January 10, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 10, 2026 07:00:00 PM" data-start="January 09, 2026 07:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-7">Sochaux vs Lens</a></td>
+<td>January 10, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 10, 2026 07:00:00 PM" data-start="January 09, 2026 07:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-14">Chivas vs Pachuca</a></td>
+<td>January 10, 2026 3:07 PM</td>
+<td><span class="countdown-timer" data-end="January 10, 2026 07:00:00 PM" data-start="January 09, 2026 07:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-15">León vs Cruz Azul</a></td>
+<td>January 10, 2026 5:00 PM</td>
+<td><span class="countdown-timer" data-end="January 10, 2026 07:00:00 PM" data-start="January 09, 2026 07:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-16">Santos Laguna vs Necaxa</a></td>
+<td>January 10, 2026 5:00 PM</td>
+<td><span class="countdown-timer" data-end="January 10, 2026 07:00:00 PM" data-start="January 09, 2026 07:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-15"></a></td>
+<td>January 10, 2026 7:00 PM</td>
 <td><span class="countdown-timer" data-end="January 10, 2026 07:00:00 PM" data-start="January 09, 2026 07:00:00 PM"></span></td>
 </tr>
 <tr>
