--- a/nhl.html
+++ b/nhl.html
@@ -114,29 +114,74 @@
             <td colspan="3"><strong>Friday, January 10, 2025</strong></td>
         </tr>
         <tr>
-            <td><a href="https://roxiestreams.live/nhl-streams-1">Chicago Blackhawks vs Detroit Red Wings</a></td>
-            <td>January 10, 2025 04:00 PM</td>
-            <td><span class="countdown-timer" data-end="2025-01-11 16:00:00" data-start="2025-01-10 16:00:00"></span></td>
+            <td><a href="https://roxiestreams.live/nhl-streams-1">New York Rangers vs Boston Bruins</a></td>
+            <td>January 10, 2026 10:00 AM</td>
+            <td><span class="countdown-timer" data-end="2026-01-11 10:00:00" data-start="2026-01-10 10:00:00"></span></td>
         </tr>
         <tr>
-            <td><a href="https://roxiestreams.live/nhl-streams-2">Montreal Canadiens vs Washington Capitals</a></td>
-            <td>January 10, 2025 04:00 PM</td>
-            <td><span class="countdown-timer" data-end="2025-01-11 16:00:00" data-start="2025-01-10 16:00:00"></span></td>
+            <td><a href="https://roxiestreams.live/nhl-streams-2">Calgary Flames vs Pittsburgh Penguins</a></td>
+            <td>January 10, 2026 12:30 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-11 12:30:00" data-start="2026-01-10 12:30:00"></span></td>
         </tr>
         <tr>
-            <td><a href="https://roxiestreams.live/nhl-streams-3">Vancouver Canucks vs Carolina Hurricanes</a></td>
-            <td>January 10, 2025 04:00 PM</td>
-            <td><span class="countdown-timer" data-end="2025-01-11 16:00:00" data-start="2025-01-10 16:00:00"></span></td>
+            <td><a href="https://roxiestreams.live/nhl-streams-3">Columbus Blue Jackets vs Colorado Avalanche</a></td>
+            <td>January 10, 2026 01:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-11 13:00:00" data-start="2026-01-10 13:00:00"></span></td>
         </tr>
         <tr>
-            <td><a href="https://roxiestreams.live/nhl-streams-4">Los Angeles Kings vs Winnipeg Jets</a></td>
-            <td>January 10, 2025 05:00 PM</td>
-            <td><span class="countdown-timer" data-end="2025-01-11 17:00:00" data-start="2025-01-10 17:00:00"></span></td>
+            <td><a href="https://roxiestreams.live/nhl-streams-4">Dallas Stars vs San Jose Sharks</a></td>
+            <td>January 10, 2026 01:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-11 13:00:00" data-start="2026-01-10 13:00:00"></span></td>
         </tr>
         <tr>
-            <td><a href="https://roxiestreams.live/nhl-streams-5">San Jose Sharks vs Utah Hockey Club</a></td>
-            <td>January 10, 2025 06:00 PM</td>
-            <td><span class="countdown-timer" data-end="2025-01-11 18:00:00" data-start="2025-01-10 18:00:00"></span></td>
+            <td><a href="https://roxiestreams.live/nhl-streams-5">Anaheim Ducks vs Buffalo Sabres</a></td>
+            <td>January 10, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-11 16:00:00" data-start="2026-01-10 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-6">Vancouver Canucks vs Toronto Maple Leafs</a></td>
+            <td>January 10, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-11 16:00:00" data-start="2026-01-10 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-7">Detroit Red Wings vs Montreal Canadiens</a></td>
+            <td>January 10, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-11 16:00:00" data-start="2026-01-10 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-8">Florida Panthers vs Ottawa Senators</a></td>
+            <td>January 10, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-11 16:00:00" data-start="2026-01-10 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-9">Tampa Bay Lightning vs Philadelphia Flyers</a></td>
+            <td>January 10, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-11 16:00:00" data-start="2026-01-10 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-10">Seattle Kraken vs Carolina Hurricanes</a></td>
+            <td>January 10, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-11 16:00:00" data-start="2026-01-10 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-11">Chicago Blackhawks vs Nashville Predators</a></td>
+            <td>January 10, 2026 05:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-11 17:00:00" data-start="2026-01-10 17:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-12">New York Islanders vs Minnesota Wild</a></td>
+            <td>January 10, 2026 05:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-11 17:00:00" data-start="2026-01-10 17:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-13">Los Angeles Kings vs Edmonton Oilers</a></td>
+            <td>January 10, 2026 07:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-11 19:00:00" data-start="2026-01-10 19:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-14">St. Louis Blues vs Vegas Golden Knights</a></td>
+            <td>January 10, 2026 07:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-11 19:00:00" data-start="2026-01-10 19:00:00"></span></td>
         </tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
