--- a/nfl.html
+++ b/nfl.html
@@ -154,6 +154,34 @@
        </span>
       </td>
      </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nfl-streams-1">
+         Los Angeles Rams vs Carolina Panthers
+       </a>
+      </td>
+      <td>
+       January 10, 2026 1:30 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="January 10, 2026 10:00 AM:00" data-start="January 09, 2026 4:30 PM:00">
+       </span>
+      </td>
+     </tr>
+     <tr>
+      <td>
+       <a href="https://roxiestreams.live/nfl-streams-2">
+         Green Bay Packers vs Chicago Bears
+       </a>
+      </td>
+      <td>
+       January 10, 2026 5:00 PM
+      </td>
+      <td>
+       <span class="countdown-timer" data-end="January 10, 2026 10:00 AM:00" data-start="January 09, 2026 4:30 PM:00">
+       </span>
+      </td>
+     </tr>
     </tbody>
    </table>
    <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
