--- a/soccer-streams-6.html
+++ b/soccer-streams-6.html
@@ -101,8 +101,7 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
             <div class="streamchanger">
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://daffodil.shadow-ran.online/azteca.m3u8')">Stream 1</button>
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://d162h6qqsk8wvl.cloudfront.net/91890373-57e0-4162-92a9-f3244f50a35d/manifest.m3u8')">Stream 2</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://daffodil.shadow-ran.online/one.m3u8')">Stream 1</button>
             </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
@@ -137,7 +136,7 @@
         }
 
         window.onload = function() {
-            showPlayer('clappr', 'https://daffodil.shadow-ran.online/azteca.m3u8');
+            showPlayer('clappr', 'https://daffodil.shadow-ran.online/one.m3u8');
         };
     </script>
     <script>
